// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing COGatewayAccess DNS checkbox checks succesfully 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main page"
  >
    <div
      style="top: 86px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-large StyledProps--background-blue200"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.dns.info
              </p>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-xsmall"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="line-height: 20px;"
            >
              ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.title
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <span
                class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--color StyledProps--color-blue500"
                icon="info-sign"
              >
                <svg
                  data-icon="info-sign"
                  height="23"
                  viewBox="0 0 20 20"
                  width="23"
                >
                  <desc>
                    info-sign
                  </desc>
                  <path
                    d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="max-width: 80%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="font-weight: bold; line-height: 20px;"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.step1.title
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="line-height: 20px;"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.step1.description
                </p>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <span
                class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--color StyledProps--color-blue500"
                icon="info-sign"
              >
                <svg
                  data-icon="info-sign"
                  height="23"
                  viewBox="0 0 20 20"
                  width="23"
                >
                  <desc>
                    info-sign
                  </desc>
                  <path
                    d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="max-width: 80%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="font-weight: bold; line-height: 20px;"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.step3.title
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="line-height: 20px;"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.dns.setup.step3.description
                </p>
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="color: rgb(2, 120, 213); font-weight: 500; line-height: 24px;"
            >
              ce.co.autoStoppingRule.helpText.readMore
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
      style="margin-left: 10px;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-semi-bold"
            level="2"
          >
            ce.co.autoStoppingRule.setupAccess.pageName
          </h2>
        </div>
        <h3
          class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
          level="3"
        >
          ce.co.gatewayAccess.subtitle
        </h3>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
            level="3"
          >
            ce.co.gatewayAccess.accessDescription
          </h3>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="info"
          >
            <svg
              height="16"
              viewBox="0 0 12 12"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                checked=""
                id="DNSLink"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              DNS Link
            </label>
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                id="ssh"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              SSH / RDP
            </label>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main setupTab"
      >
        <div
          class="bp3-tabs Tabs--main Tabs--horizontal"
        >
          <div
            class="bp3-tab-list"
            role="tablist"
          >
            <div
              class="bp3-tab-indicator-wrapper"
              style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
            >
              <div
                class="bp3-tab-indicator"
              />
            </div>
            <div
              aria-controls="bp3-tab-panel_setupTabs_dns"
              aria-disabled="false"
              aria-expanded="true"
              aria-selected="true"
              class="bp3-tab"
              data-tab-id="dns"
              id="bp3-tab-title_setupTabs_dns"
              role="tab"
              tabindex="0"
            >
              ce.co.gatewayAccess.dnsLink
            </div>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="bp3-tab-title_setupTabs_dns"
            class="bp3-tab-panel"
            id="bp3-tab-panel_setupTabs_dns"
            role="tabpanel"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-medium"
            >
              <h3
                class="StyledProps--font StyledProps--font-h3 StyledProps--main"
                level="3"
              >
                A DNS Link lets you to connect to the Rule by matching human-readable domain names
              </h3>
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main dnsLinkContainer"
                      >
                        <h3
                          class="StyledProps--font StyledProps--font-h3 StyledProps--main header StyledProps--font-weight-bold"
                          level="3"
                        >
                          ce.co.autoStoppingRule.setupAccess.selectLb
                        </h3>
                        <div
                          class="Layout--horizontal StyledProps--main selectLoadBalancerContainer"
                        >
                          <img
                            class="helperImage"
                            src="test-file-stub"
                          />
                          <div>
                            <p
                              class="StyledProps--font StyledProps--main helpText"
                            >
                              ce.co.autoStoppingRule.setupAccess.selectLbHelpText
                            </p>
                            <div
                              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
                            >
                              <div
                                class="bp3-popover-wrapper loadBalancerSelector Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="accessPoint"
                                      placeholder="Search..."
                                      style="padding-right: 0px;"
                                      type="text"
                                      value=""
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                        icon="caret-down"
                                      >
                                        <svg
                                          data-icon="caret-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            caret-down
                                          </desc>
                                          <path
                                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue500"
                                style="cursor: pointer;"
                              >
                                +ce.co.accessPoint.new
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main dnsLinkContainer"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                        >
                          <h3
                            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
                            level="3"
                          >
                            ce.co.autoStoppingRule.setupAccess.customDomain.helpText
                          </h3>
                        </div>
                        <div
                          class="Layout--horizontal StyledProps--main"
                        >
                          <label
                            class="bp3-control bp3-radio"
                          >
                            <input
                              checked=""
                              type="radio"
                              value="no"
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                          </label>
                          <div
                            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                              style="font-weight: 500; line-height: 20px;"
                            >
                              ce.co.dnsSetup.autoURL
                            </p>
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500"
                              style="font-size: 12px; font-weight: 400; line-height: 18px;"
                            >
                              ce.co.autoStoppingRule.setupAccess.autogeneratedHelpText
                            </p>
                          </div>
                        </div>
                        <div
                          class="Layout--horizontal StyledProps--main"
                          style="width: 100%;"
                        >
                          <label
                            class="bp3-control bp3-radio centerAlignedRadio"
                          >
                            <input
                              name="usingCustomDomain"
                              type="radio"
                              value="yes"
                            />
                            <span
                              class="bp3-control-indicator"
                            />
                          </label>
                          <div
                            class="bp3-form-group bp3-disabled"
                            data-id="customURL-0"
                            style="width: 100%;"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group bp3-disabled"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  disabled=""
                                  name="customURL"
                                  placeholder="ce.co.dnsSetup.customURL"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <label
                          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox publicAccessibleCheckboxContainer StyledProps--main"
                        >
                          <input
                            checked=""
                            name="publicallyAccessible"
                            type="checkbox"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          This url is publicly accessible
                        </label>
                      </div>
                      
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing COGatewayAccess SSH checkbox checks succesfully and download os ssh file 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main page"
  >
    <div
      style="top: 86px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-large StyledProps--background-blue200"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.ssh.info
              </p>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-large"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="line-height: 20px;"
            >
              ce.co.autoStoppingRule.setupAccess.helpText.ssh.setup.title
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <span
                class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--color StyledProps--color-blue500"
                icon="info-sign"
              >
                <svg
                  data-icon="info-sign"
                  height="23"
                  viewBox="0 0 20 20"
                  width="23"
                >
                  <desc>
                    info-sign
                  </desc>
                  <path
                    d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                style="max-width: 80%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  style="font-weight: bold; line-height: 20px;"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.ssh.setup.download
                </p>
                <p
                  class="StyledProps--font StyledProps--main"
                  style="line-height: 20px;"
                >
                  ce.co.autoStoppingRule.setupAccess.helpText.ssh.setup.description
                </p>
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="color: rgb(2, 120, 213); font-weight: 500; line-height: 24px;"
            >
              ce.co.autoStoppingRule.helpText.readMore
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
      style="margin-left: 10px;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-semi-bold"
            level="2"
          >
            ce.co.autoStoppingRule.setupAccess.pageName
          </h2>
        </div>
        <h3
          class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
          level="3"
        >
          ce.co.gatewayAccess.subtitle
        </h3>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
            level="3"
          >
            ce.co.gatewayAccess.accessDescription
          </h3>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="info"
          >
            <svg
              height="16"
              viewBox="0 0 12 12"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                checked=""
                id="DNSLink"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              DNS Link
            </label>
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                checked=""
                id="ssh"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              SSH / RDP
            </label>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main setupTab"
      >
        <div
          class="bp3-tabs Tabs--main Tabs--horizontal"
        >
          <div
            class="bp3-tab-list"
            role="tablist"
          >
            <div
              class="bp3-tab-indicator-wrapper"
              style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
            >
              <div
                class="bp3-tab-indicator"
              />
            </div>
            <div
              aria-controls="bp3-tab-panel_setupTabs_dns"
              aria-disabled="false"
              aria-expanded="false"
              aria-selected="false"
              class="bp3-tab"
              data-tab-id="dns"
              id="bp3-tab-title_setupTabs_dns"
              role="tab"
              tabindex="0"
            >
              ce.co.gatewayAccess.dnsLink
            </div>
            <div
              aria-controls="bp3-tab-panel_setupTabs_ssh"
              aria-disabled="false"
              aria-expanded="true"
              aria-selected="true"
              class="bp3-tab"
              data-tab-id="ssh"
              id="bp3-tab-title_setupTabs_ssh"
              role="tab"
              tabindex="0"
            >
              ce.co.gatewayAccess.sshRdp
            </div>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="bp3-tab-title_setupTabs_ssh"
            class="bp3-tab-panel"
            id="bp3-tab-panel_setupTabs_ssh"
            role="tabpanel"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main sshSetupContainer StyledProps--padding-medium"
            >
              <p
                class="StyledProps--font StyledProps--main text"
              >
                ce.co.sshSetup
              </p>
              <div
                class="Layout--horizontal StyledProps--main infoSection"
              >
                <div
                  class="selectContainer"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sshOs"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
                  disabled=""
                  style="border-radius: 8px; padding: 12px; width: 130px; font-size: 12px;"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Download CLI
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing COGatewayAccess renders without crashing 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main page"
  >
    <div
      style="top: 86px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-large"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.dns.info
              </p>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.ssh.info
              </p>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.rdp.info
              </p>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.bgTasks.info
              </p>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main"
                style="line-height: 20px;"
              >
                ce.co.autoStoppingRule.setupAccess.helpText.ip.info
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
              style="color: rgb(2, 120, 213); font-weight: 500; line-height: 24px;"
            >
              ce.co.autoStoppingRule.helpText.readMore
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-medium"
      style="margin-left: 10px;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-semi-bold"
            level="2"
          >
            ce.co.autoStoppingRule.setupAccess.pageName
          </h2>
        </div>
        <h3
          class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
          level="3"
        >
          ce.co.gatewayAccess.subtitle
        </h3>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--font-weight-light"
            level="3"
          >
            ce.co.gatewayAccess.accessDescription
          </h3>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="info"
          >
            <svg
              height="16"
              viewBox="0 0 12 12"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                id="DNSLink"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              DNS Link
            </label>
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
            >
              <input
                id="ssh"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              SSH / RDP
            </label>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main setupTab"
      >
        <div
          class="bp3-tabs Tabs--main Tabs--horizontal"
        >
          <div
            class="bp3-tab-list"
            role="tablist"
          >
            <div
              class="bp3-tab-indicator-wrapper"
              style="display: none;"
            >
              <div
                class="bp3-tab-indicator"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
